--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
   - packages/callhierarchy/node_modules
   - packages/core/node_modules
   - packages/cpp/node_modules
+  - packages/debug-cortex/node_modules
   - packages/debug-nodejs/node_modules
   - packages/debug/node_modules
   - packages/editor/node_modules
